<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.bakota.compteurpointsbasket.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_eqp_a"
                android:gravity="center"
                android:textSize="14sp"
                android:padding="16dp"
                android:fontFamily="sans-serif"
                />
            <TextView
                android:id="@+id/equipe_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:textSize="56sp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/trois_pt_eqp_a"
                android:text="@string/trois_pts"
                android:background="@color/colorPrimary"
                android:onClick="ajouterTroisPoints"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/deux_pt_eqp_a"
                android:text="@string/deux_pts"
                android:background="@color/colorPrimary"
                android:onClick="ajouterDeuxPoints"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/colorPrimary"
                android:id="@+id/un_pt_eqp_a"
                android:text="@string/un_pts"
                android:onClick="ajouterUnPoint"/>

        </LinearLayout>

        <view
            android:layout_width="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_eqp_b"
                android:gravity="center"
                android:textSize="14sp"
                android:padding="16dp"
                android:fontFamily="sans-serif"
                />
            <TextView
                android:id="@+id/equipe_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:textSize="56sp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/trois_pt_eqp_b"
                android:text="@string/trois_pts"
                android:background="@color/colorPrimary"
                android:onClick="ajouterTroisPoints"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/deux_pt_eqp_b"
                android:background="@color/colorPrimary"
                android:text="@string/deux_pts"
                android:onClick="ajouterDeuxPoints"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:background="@color/colorPrimary"
                android:layout_marginRight="24dp"
                android:id="@+id/un_pt_eqp_b"
                android:text="@string/un_pts"
                android:onClick="ajouterUnPoint"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/reset_btn"
        android:background="@color/colorAccent"
        android:layout_marginBottom="32dp"
        />

</RelativeLayout>
